# secapi-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: financials.py  insider_trades.py  search_filings.py
scripts/: generate_models.py  openapi.json
secapi/: __init__.py  _base_client.py  _resource.py  auth.py  client.py  entities.py  exceptions.py  filings.py  financials.py  insiders.py  institutions.py
secapi/models/: __init__.py  _base.py  common.py  entity.py  filing.py  financial.py  insider.py  institution.py
tests/: conftest.py  test_client.py  test_entities.py  test_filings.py  test_financials.py  test_insiders.py  test_institutions.py  test_models.py  test_resources.py
